[gd_scene load_steps=6 format=3 uid="uid://shjqvn85bxuk"]

[ext_resource type="Script" path="res://Characters/Enemies/EntityMob.gd" id="1_335ko"]

[sub_resource type="CircleShape2D" id="CircleShape2D_savth"]
radius = 6.06709

[sub_resource type="CircleShape2D" id="CircleShape2D_sojdl"]
radius = 6.10687

[sub_resource type="CircleShape2D" id="CircleShape2D_fsmjp"]

[sub_resource type="LabelSettings" id="LabelSettings_258b5"]
font_size = 12

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("navigation_agent", "aggro_area", "sprite", "hitbox")]
collision_layer = 4
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_335ko")
navigation_agent = NodePath("Navigation/NavigationAgent2D")
aggro_area = NodePath("Aggr/AggroRange")
sprite = NodePath("Character")
hitbox = NodePath("CollisionShape2D")
movement_speed = 50.0
max_hp = 30.0

[node name="StateMachines" type="Node" parent="."]

[node name="Animation" type="Node" parent="."]

[node name="Timers" type="Node" parent="."]

[node name="Character" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.31, 1.31)
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.84044, 0.84044)
shape = SubResource("CircleShape2D_savth")

[node name="HitBox" type="Area2D" parent="."]
scale = Vector2(1.31, 1.31)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_sojdl")
debug_color = Color(0.945468, 0.204153, 0.300836, 0.42)

[node name="Navigation" type="Node2D" parent="."]
visible = false

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
debug_enabled = true

[node name="RecalculateNavTimer" type="Timer" parent="Navigation"]
wait_time = 0.1
autostart = true

[node name="Aggr" type="Node2D" parent="."]
visible = false

[node name="AggroRange" type="Area2D" parent="Aggr"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggr/AggroRange"]
scale = Vector2(15, 15)
shape = SubResource("CircleShape2D_fsmjp")
debug_color = Color(0.515007, 0.562046, 0.365721, 0.42)

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -30.0
offset_right = 20.0
offset_bottom = -7.0
label_settings = SubResource("LabelSettings_258b5")

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="Navigation/RecalculateNavTimer" to="." method="_on_recalculate_timer_timeout"]
[connection signal="area_entered" from="Aggr/AggroRange" to="." method="_on_aggro_range_area_entered"]
[connection signal="area_exited" from="Aggr/AggroRange" to="." method="_on_aggro_range_area_exited"]
